// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagCategoryForm: Component should render correctly 1`] = `
Array [
  .c0 {
  position: relative;
}

.c1 {
  margin-top: 0;
}

.c2 {
  position: relative;
  top: 0;
  left: 0;
  color: #f21e29;
  font-size: 14px;
  font-weight: normal;
}

@media (min-width:1050px) {
  .c1 {
    margin-top: 0;
  }
}

@media (min-width:480px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

<div
    className="c0"
  >
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "maxWidth": "100%",
          "paddingBottom": "30px",
          "position": "relative",
        }
      }
    >
      <label
        htmlFor="name"
        style={
          Object {
            "border": "none",
            "borderTop": "2px solid #2F2F36",
            "color": "#71737e",
            "display": "block",
            "fontSize": "14px",
            "outline": "none",
            "paddingTop": "8px",
            "width": "100%",
          }
        }
      >
        Name
      </label>
      <input
        id="name"
        name="name"
        onChange={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "border": "none",
            "color": "#FFF",
            "fontFamily": "inherit",
            "fontSize": "18px",
            "fontWeight": "inherit",
            "letterSpacing": "normal",
            "lineHeight": "24px",
            "maxWidth": "100%",
            "minWidth": 60,
            "outline": "none",
            "padding": 0,
          }
        }
        type="text"
        value="name"
      />
      <div
        style={
          Object {
            "position": "absolute",
            "right": 0,
            "top": 2,
          }
        }
      >
        <label
          htmlFor="name"
          style={
            Object {
              "cursor": "pointer",
            }
          }
        >
          <div
            className="c1"
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "30px",
                  "width": "30px",
                }
              }
              viewBox="0 0 30 30"
            >
              <path
                d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </label>
      </div>
    </div>
    <div
      className="c2"
      id="nameError"
    />
  </div>,
  @media (min-width:1050px) {

}

@media (min-width:480px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

<label
    style={
      Object {
        "border": "none",
        "borderTop": "2px solid #2F2F36",
        "color": "#71737e",
        "display": "block",
        "fontSize": "14px",
        "outline": "none",
        "paddingTop": "8px",
        "width": "100%",
      }
    }
  >
    Applicable in
  </label>,
  .c0 {
  margin-right: 20px;
}

@media (min-width:1050px) {

}

@media (min-width:480px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

<div
    style={
      Object {
        "border": "none",
        "borderTop": "1px solid #2F2F36",
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "borderBottom": "none",
          "color": "#FFF",
          "display": "flex",
          "flexDirection": "row-reverse",
          "height": 48,
          "justifyContent": "flex-end",
        }
      }
    >
      <input
        aria-hidden={true}
        checked={false}
        id="content"
        name="type"
        onChange={[Function]}
        style={
          Object {
            "height": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "top": 0,
            "visibility": "hidden",
          }
        }
        type="checkbox"
        value="content"
      />
      <span
        style={
          Object {
            "overflow": "hidden",
            "textOverflow": "ellipsis",
            "whiteSpace": "nowrap",
          }
        }
      >
        <label
          className="c0"
          htmlFor="content"
        >
          Content
        </label>
      </span>
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "fontSize": 0,
          }
        }
      >
        <label
          htmlFor="content"
          style={
            Object {
              "cursor": "pointer",
              "marginRight": 10,
            }
          }
        >
          <svg
            style={
              Object {
                "height": "30px",
                "stroke": "#FFF",
                "width": "30px",
              }
            }
            viewBox="0 0 30 30"
          >
            <path
              d="M7.5 7.5h15v15h-15z"
              fill="none"
            />
          </svg>
        </label>
      </div>
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "borderBottom": "none",
          "color": "#FFF",
          "display": "flex",
          "flexDirection": "row-reverse",
          "height": 48,
          "justifyContent": "flex-end",
        }
      }
    >
      <input
        aria-hidden={true}
        checked={false}
        id="dataset"
        name="type"
        onChange={[Function]}
        style={
          Object {
            "height": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "top": 0,
            "visibility": "hidden",
          }
        }
        type="checkbox"
        value="dataset"
      />
      <span
        style={
          Object {
            "overflow": "hidden",
            "textOverflow": "ellipsis",
            "whiteSpace": "nowrap",
          }
        }
      >
        <label
          htmlFor="dataset"
        >
          Dataset
        </label>
      </span>
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "fontSize": 0,
          }
        }
      >
        <label
          htmlFor="dataset"
          style={
            Object {
              "cursor": "pointer",
              "marginRight": 10,
            }
          }
        >
          <svg
            style={
              Object {
                "height": "30px",
                "stroke": "#FFF",
                "width": "30px",
              }
            }
            viewBox="0 0 30 30"
          >
            <path
              d="M7.5 7.5h15v15h-15z"
              fill="none"
            />
          </svg>
        </label>
      </div>
    </div>
  </div>,
  .c2 {
  text-align: right;
}

.c0 {
  color: #71737e;
  text-align: center;
  padding-bottom: 20px;
  min-height: 43px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  width: 33%;
}

@media (min-width:1050px) {

}

@media (min-width:480px) {

}

@media (min-width:1050px) {
  .c0 {
    margin-top: 0px;
    padding-bottom: 40px;
  }
}

@media (min-width:1050px) {
  .c3 {
    display: block;
  }
}

<div
    className="c0"
  >
    <div
      className="c1"
      id="tagsCounter"
    />
    2 Tags
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <button
            disabled={false}
            id="addTagBtn"
            onClick={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFF",
                "border": "none",
                "borderRadius": "30px",
                "color": "#000",
                "cursor": "pointer",
                "display": "flex",
                "fill": "#FFF",
                "fontSize": "20px",
                "height": 40,
                "justifyContent": "center",
                "margin": "0",
                "minHeight": 40,
                "outline": "none",
                "padding": "0",
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
                "width": 40,
              }
            }
            type="button"
          >
            <svg
              style={
                Object {
                  "fill": "#000",
                  "height": 40,
                  "minHeight": 40,
                  "shapeRendering": "crispEdges",
                  "width": 40,
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M32 15v13h13v4H32v13h-4V32H15v-4h13V15h4z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>,
  .c1 {
  border-bottom: 2px solid #2F2F36;
  padding: 10px 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-top: 2px solid #2F2F36;
}

@media (min-width:1050px) {

}

@media (min-width:480px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          style={
            Object {
              "display": "flex",
              "flexDirection": "column",
              "maxWidth": "100%",
              "paddingBottom": 0,
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <input
            id="tags-0"
            name="tags-0"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "color": "#FFF",
                "fontFamily": "inherit",
                "fontSize": "18px",
                "fontWeight": "inherit",
                "letterSpacing": "normal",
                "lineHeight": "24px",
                "maxWidth": "100%",
                "minWidth": 60,
                "outline": "none",
                "padding": 0,
              }
            }
            type="text"
            value="value"
          />
          <div
            style={
              Object {
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <label
              htmlFor="tags-0"
              style={
                Object {
                  "cursor": "pointer",
                }
              }
            />
          </div>
        </div>
        <svg
          id="deleteTagBtn-0"
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
              "fill": "#FFF",
              "height": 35,
              "marginLeft": 5,
              "minWidth": 35,
              "width": 35,
            }
          }
          viewBox="0 0 60 60"
        >
          <path
            d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          style={
            Object {
              "display": "flex",
              "flexDirection": "column",
              "maxWidth": "100%",
              "paddingBottom": 0,
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <input
            id="tags-1"
            name="tags-1"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "color": "#FFF",
                "fontFamily": "inherit",
                "fontSize": "18px",
                "fontWeight": "inherit",
                "letterSpacing": "normal",
                "lineHeight": "24px",
                "maxWidth": "100%",
                "minWidth": 60,
                "outline": "none",
                "padding": 0,
              }
            }
            type="text"
            value="value"
          />
          <div
            style={
              Object {
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <label
              htmlFor="tags-1"
              style={
                Object {
                  "cursor": "pointer",
                }
              }
            />
          </div>
        </div>
        <svg
          id="deleteTagBtn-1"
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
              "fill": "#FFF",
              "height": 35,
              "marginLeft": 5,
              "minWidth": 35,
              "width": 35,
            }
          }
          viewBox="0 0 60 60"
        >
          <path
            d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>,
  .c0 {
  text-align: center;
  padding: 20px 0 40px;
  cursor: pointer;
  color: #71737e;
}

@media (min-width:1050px) {

}

@media (min-width:480px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

<div
    className="c0"
    onClick={[Function]}
  >
    Tap or click to add new Tag
  </div>,
  .c0 {
  border-top: 2px solid #2F2F36;
  padding: 10px 0 20px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 15px;
  position: relative;
}

.c3 {
  padding-right: 10px;
}

.c2 {
  padding-left: 10px;
  max-width: 100%;
}

.c4 {
  color: #71737e;
  min-width: 100%;
}

@media (min-width:1050px) {

}

@media (min-width:480px) {
  .c1 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <div>
        <input
          id="isAvailable"
          onChange={[Function]}
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
            }
          }
          type="checkbox"
        />
        <label
          htmlFor="isAvailable"
        >
          <div
            style={
              Object {
                "background": "#2F2F36",
                "borderRadius": 20,
                "boxSizing": "border-box",
                "cursor": "pointer",
                "height": 24,
                "padding": 2,
                "transition": "background 200ms ease-in-out",
                "width": 44,
              }
            }
          >
            <div
              style={
                Object {
                  "background": "#FFF",
                  "borderRadius": "50%",
                  "height": 20,
                  "transform": "translateX(0)",
                  "transition": "transform 200ms ease-in-out",
                  "width": 20,
                }
              }
            />
          </div>
        </label>
      </div>
      <div
        className="c2"
      >
        <label
          className="c3"
          htmlFor="isAvailable"
        >
          Make it Available
        </label>
        <span
          className="c4"
        >
          This Tag Category is currently unavailable for Editors
        </span>
      </div>
    </div>
    <div
      className="c1"
    >
      <div>
        <input
          id="isSingleSelect"
          onChange={[Function]}
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
            }
          }
          type="checkbox"
        />
        <label
          htmlFor="isSingleSelect"
        >
          <div
            style={
              Object {
                "background": "#2F2F36",
                "borderRadius": 20,
                "boxSizing": "border-box",
                "cursor": "pointer",
                "height": 24,
                "padding": 2,
                "transition": "background 200ms ease-in-out",
                "width": 44,
              }
            }
          >
            <div
              style={
                Object {
                  "background": "#FFF",
                  "borderRadius": "50%",
                  "height": 20,
                  "transform": "translateX(0)",
                  "transition": "transform 200ms ease-in-out",
                  "width": 20,
                }
              }
            />
          </div>
        </label>
      </div>
      <div
        className="c2"
      >
        <label
          className="c3"
          htmlFor="isSingleSelect"
        >
          Make it Single Choice
        </label>
        <span
          className="c4"
        >
          This Tag Category is currently Multi Choice
        </span>
      </div>
    </div>
  </div>,
]
`;

exports[`TagCategoryForm: Component should render empty 1`] = `
Array [
  .c0 {
  position: relative;
}

.c1 {
  margin-top: 0;
}

.c2 {
  position: relative;
  top: 0;
  left: 0;
  color: #f21e29;
  font-size: 14px;
  font-weight: normal;
}

@media (min-width:1050px) {
  .c1 {
    margin-top: 0;
  }
}

@media (min-width:480px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

<div
    className="c0"
  >
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "maxWidth": "100%",
          "paddingBottom": "30px",
          "position": "relative",
        }
      }
    >
      <label
        htmlFor="name"
        style={
          Object {
            "border": "none",
            "borderTop": "2px solid #2F2F36",
            "color": "#71737e",
            "display": "block",
            "fontSize": "14px",
            "outline": "none",
            "paddingTop": "8px",
            "width": "100%",
          }
        }
      >
        Name
      </label>
      <input
        id="name"
        name="name"
        onChange={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "border": "none",
            "color": "#FFF",
            "fontFamily": "inherit",
            "fontSize": "18px",
            "fontWeight": "inherit",
            "letterSpacing": "normal",
            "lineHeight": "24px",
            "maxWidth": "100%",
            "minWidth": 60,
            "outline": "none",
            "padding": 0,
          }
        }
        type="text"
        value=""
      />
      <div
        style={
          Object {
            "position": "absolute",
            "right": 0,
            "top": 2,
          }
        }
      >
        <label
          htmlFor="name"
          style={
            Object {
              "cursor": "pointer",
            }
          }
        >
          <div
            className="c1"
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "30px",
                  "width": "30px",
                }
              }
              viewBox="0 0 30 30"
            >
              <path
                d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </label>
      </div>
    </div>
    <div
      className="c2"
      id="nameError"
    />
  </div>,
  @media (min-width:1050px) {

}

@media (min-width:480px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

<label
    style={
      Object {
        "border": "none",
        "borderTop": "2px solid #2F2F36",
        "color": "#71737e",
        "display": "block",
        "fontSize": "14px",
        "outline": "none",
        "paddingTop": "8px",
        "width": "100%",
      }
    }
  >
    Applicable in
  </label>,
  .c0 {
  margin-right: 20px;
}

@media (min-width:1050px) {

}

@media (min-width:480px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

<div
    style={
      Object {
        "border": "none",
        "borderTop": "1px solid #2F2F36",
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "borderBottom": "none",
          "color": "#FFF",
          "display": "flex",
          "flexDirection": "row-reverse",
          "height": 48,
          "justifyContent": "flex-end",
        }
      }
    >
      <input
        aria-hidden={true}
        checked={false}
        id="content"
        name="type"
        onChange={[Function]}
        style={
          Object {
            "height": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "top": 0,
            "visibility": "hidden",
          }
        }
        type="checkbox"
        value="content"
      />
      <span
        style={
          Object {
            "overflow": "hidden",
            "textOverflow": "ellipsis",
            "whiteSpace": "nowrap",
          }
        }
      >
        <label
          className="c0"
          htmlFor="content"
        >
          Content
        </label>
      </span>
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "fontSize": 0,
          }
        }
      >
        <label
          htmlFor="content"
          style={
            Object {
              "cursor": "pointer",
              "marginRight": 10,
            }
          }
        >
          <svg
            style={
              Object {
                "height": "30px",
                "stroke": "#FFF",
                "width": "30px",
              }
            }
            viewBox="0 0 30 30"
          >
            <path
              d="M7.5 7.5h15v15h-15z"
              fill="none"
            />
          </svg>
        </label>
      </div>
    </div>
    <div
      style={
        Object {
          "alignItems": "center",
          "borderBottom": "none",
          "color": "#FFF",
          "display": "flex",
          "flexDirection": "row-reverse",
          "height": 48,
          "justifyContent": "flex-end",
        }
      }
    >
      <input
        aria-hidden={true}
        checked={false}
        id="dataset"
        name="type"
        onChange={[Function]}
        style={
          Object {
            "height": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "top": 0,
            "visibility": "hidden",
          }
        }
        type="checkbox"
        value="dataset"
      />
      <span
        style={
          Object {
            "overflow": "hidden",
            "textOverflow": "ellipsis",
            "whiteSpace": "nowrap",
          }
        }
      >
        <label
          htmlFor="dataset"
        >
          Dataset
        </label>
      </span>
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "fontSize": 0,
          }
        }
      >
        <label
          htmlFor="dataset"
          style={
            Object {
              "cursor": "pointer",
              "marginRight": 10,
            }
          }
        >
          <svg
            style={
              Object {
                "height": "30px",
                "stroke": "#FFF",
                "width": "30px",
              }
            }
            viewBox="0 0 30 30"
          >
            <path
              d="M7.5 7.5h15v15h-15z"
              fill="none"
            />
          </svg>
        </label>
      </div>
    </div>
  </div>,
  .c2 {
  text-align: right;
}

.c0 {
  color: #71737e;
  text-align: center;
  padding-bottom: 20px;
  min-height: 43px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  width: 33%;
}

@media (min-width:1050px) {

}

@media (min-width:480px) {

}

@media (min-width:1050px) {
  .c0 {
    margin-top: 0px;
    padding-bottom: 40px;
  }
}

@media (min-width:1050px) {
  .c3 {
    display: block;
  }
}

<div
    className="c0"
  >
    <div
      className="c1"
      id="tagsCounter"
    />
    0 Tags
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <button
            disabled={false}
            id="addTagBtn"
            onClick={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFF",
                "border": "none",
                "borderRadius": "30px",
                "color": "#000",
                "cursor": "pointer",
                "display": "flex",
                "fill": "#FFF",
                "fontSize": "20px",
                "height": 40,
                "justifyContent": "center",
                "margin": "0",
                "minHeight": 40,
                "outline": "none",
                "padding": "0",
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
                "width": 40,
              }
            }
            type="button"
          >
            <svg
              style={
                Object {
                  "fill": "#000",
                  "height": 40,
                  "minHeight": 40,
                  "shapeRendering": "crispEdges",
                  "width": 40,
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M32 15v13h13v4H32v13h-4V32H15v-4h13V15h4z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>,
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-top: 2px solid #2F2F36;
}

@media (min-width:1050px) {

}

@media (min-width:480px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

<div
    className="c0"
  />,
  .c0 {
  text-align: center;
  padding: 20px 0 40px;
  cursor: pointer;
  color: #71737e;
}

@media (min-width:1050px) {

}

@media (min-width:480px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

<div
    className="c0"
    onClick={[Function]}
  >
    Tap or click to add new Tag
  </div>,
  .c0 {
  border-top: 2px solid #2F2F36;
  padding: 10px 0 20px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 15px;
  position: relative;
}

.c3 {
  padding-right: 10px;
}

.c2 {
  padding-left: 10px;
  max-width: 100%;
}

.c4 {
  color: #71737e;
  min-width: 100%;
}

@media (min-width:1050px) {

}

@media (min-width:480px) {
  .c1 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <div>
        <input
          id="isAvailable"
          onChange={[Function]}
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
            }
          }
          type="checkbox"
        />
        <label
          htmlFor="isAvailable"
        >
          <div
            style={
              Object {
                "background": "#2F2F36",
                "borderRadius": 20,
                "boxSizing": "border-box",
                "cursor": "pointer",
                "height": 24,
                "padding": 2,
                "transition": "background 200ms ease-in-out",
                "width": 44,
              }
            }
          >
            <div
              style={
                Object {
                  "background": "#FFF",
                  "borderRadius": "50%",
                  "height": 20,
                  "transform": "translateX(0)",
                  "transition": "transform 200ms ease-in-out",
                  "width": 20,
                }
              }
            />
          </div>
        </label>
      </div>
      <div
        className="c2"
      >
        <label
          className="c3"
          htmlFor="isAvailable"
        >
          Make it Available
        </label>
        <span
          className="c4"
        >
          This Tag Category is currently unavailable for Editors
        </span>
      </div>
    </div>
    <div
      className="c1"
    >
      <div>
        <input
          id="isSingleSelect"
          onChange={[Function]}
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
            }
          }
          type="checkbox"
        />
        <label
          htmlFor="isSingleSelect"
        >
          <div
            style={
              Object {
                "background": "#2F2F36",
                "borderRadius": 20,
                "boxSizing": "border-box",
                "cursor": "pointer",
                "height": 24,
                "padding": 2,
                "transition": "background 200ms ease-in-out",
                "width": 44,
              }
            }
          >
            <div
              style={
                Object {
                  "background": "#FFF",
                  "borderRadius": "50%",
                  "height": 20,
                  "transform": "translateX(0)",
                  "transition": "transform 200ms ease-in-out",
                  "width": 20,
                }
              }
            />
          </div>
        </label>
      </div>
      <div
        className="c2"
      >
        <label
          className="c3"
          htmlFor="isSingleSelect"
        >
          Make it Single Choice
        </label>
        <span
          className="c4"
        >
          This Tag Category is currently Multi Choice
        </span>
      </div>
    </div>
  </div>,
]
`;
